# rust_cli_cursive

./: Cargo.toml  theme.toml
src/: action.rs  main.rs  views.rs
src/action/: net.rs  users.rs
src/views/: config_view.rs  data_view.rs  download_view.rs  login_view.rs  print.rs  register_view.rs  select_file_view.rs  select_path_view.rs  splash.rs  upload_view.rs
