[package]
name = "rust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = {version = "0.17", features = ["toml"]}
reqwest = {version = "0.11.9", features = ["blocking","json","multipart"]}
serde = {version = "1.0.136", features = ["derive"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"